@@ -1,3 +1,8 @@
+2019-09-09  Antony Polukhin  <antoshkka@gmail.com>
+
+	* include/bits/charconv.h (__detail::__to_chars_10_impl): Replace
+	final offsets with constants.
+
 2019-09-09  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/bits/range_access.h (__adl_to_address): Remove.
